Fix edge case where canvas is too small and breaks

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ html, body {
 .content-outer {
   width: 100%;
   height: 100vh;
-  padding: 5% 70px;
+  padding: 30px 70px;
+  min-width: 250px;
+  min-height: 250px;
 }
 
 .content-inner {
@@ -47,7 +49,7 @@ html, body {
 .menu-item {
   display: block;
   padding: 10px;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
 }
 
 .menu-item:hover {
